Listo para Netlify

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multimedia Visión Pentecostés - Panel Administrativo</title>
+    
+    <link rel="icon" type="image/png" href="/src/assets/multimedia-logo.png" />
+
     <meta name="description" content="Panel administrativo del equipo de Multimedia Visión Pentecostés" />
     <meta name="author" content="Multimedia Visión Pentecostés" />
 
